--- a/views/home.hbs
+++ b/views/home.hbs
@@ -559,31 +559,51 @@
             
             <div class="timeline" id="7th" style="display: block;">
               <div class="timeline-row">
-                <div class="timeline-time">23rd Nov 6:00 pm</div>
+                <div class="timeline-time">3:00 pm</div>
                 <div class="timeline-content">
-                  <h4>Registration Starts</h4>
+                  <h4>Registration Ends</h4>
                   <p >
-                    Registration for the fifth edition of DotSlash hackathon begins! Click on the "Apply with Devfolio" button on our website and fill out your details. You can always register individually and form a team later. RSVP will be done closer to the hackathon.
+                    Teams should ensure that they have submitted an idea based on the chosen problem statement and all their members have registered on Devfolio before 3 pm.
                   </p>
                 </div>
               </div>
 
               <div class="timeline-row">
-                <div class="timeline-time">24th Dec - 5th Jan</div>
+                <div class="timeline-time">7:00 pm</div>
                 <div class="timeline-content">
-                  <h4>Workshop Series</h4>
+                  <h4>Opening Ceremony</h4>
                   <p >
-                    In the evening informative speaker sessions will be conducted by industry experts. The platform and link for the session will be shared on our website and Discord server before the event date. 
+                    Inauguration ceremony of DotSlash5.0 will start! Participants will be briefed on rules and regulations, schedule and other information regarding the hackathon.
                   </p>
                 </div>
               </div>
 
               <div class="timeline-row">
-                <div class="timeline-time">26th Dec 6:00 pm</div>
+                <div class="timeline-time">9:00 pm</div>
                 <div class="timeline-content">
-                  <h4>Release of Problem Statements </h4>
+                  <h4>Virtual Onboarding</h4>
                   <p>
-                    Problem statements focussing on the recent and trending topics in the field of research and development will be released.
+                    The teams will be checked in before the main event commences. Participants are requested to make sure that all their team members are present and complete the check-in process.
+                  </p>
+                </div>
+              </div>
+
+              <div class="timeline-row">
+                <div class="timeline-time">10:00 pm</div>
+                <div class="timeline-content">
+                  <h4>Hacking Starts</h4>
+                  <p>
+                    Coding time starts! The participating teams can utilize the 36 hours to discuss and develop their hack based on their chosen problem statement.
+                  </p>
+                </div>
+              </div>
+
+              <div class="timeline-row">
+                <div class="timeline-time">11:00 pm</div>
+                <div class="timeline-content">
+                  <h4>Onecdot API Demo</h4>
+                  <p>
+                    Team Onecdot will give walkthrough on how to use it's API. Participants can also get their queries resolved regarding Onecdot's sponsored track prize.
                   </p>
                 </div>
               </div>
@@ -591,21 +611,31 @@
 
             <div class="timeline" id="8th" style="display: none;">
               <div class="timeline-row">
-                <div class="timeline-time">24th Dec - 5th Jan</div>
+                <div class="timeline-time">10:00 am</div>
                 <div class="timeline-content">
-                  <h4>Workshop Series</h4>
+                  <h4>Mentoring Session - I</h4>
                   <p >
-                    In the evening informative speaker sessions will be conducted by industry experts. The platform and link for the session will be shared on our website and Discord server before the event date. 
+                    Mentors will visit each of the participating teams. They will provide guidance and counsel to the teams on how they can improvise their idea or the hack they are working on.
                   </p>
                 </div>
               </div>
 
               <div class="timeline-row">
-                <div class="timeline-time">26th Dec 6:00 pm</div>
+                <div class="timeline-time">6:00 pm</div>
                 <div class="timeline-content">
-                  <h4>Release of Problem Statements </h4>
+                  <h4>Fun Activities</h4>
                   <p>
-                    Problem statements focussing on the recent and trending topics in the field of research and development will be released.
+                    There will be some fun games and exciting giveaways. Hackers can participate in these activities whenever they feel the need to take a break! The details for the same will be available on our discord server.
+                  </p>
+                </div>
+              </div>
+
+              <div class="timeline-row">
+                <div class="timeline-time">10:00 pm</div>
+                <div class="timeline-content">
+                  <h4>Q&A with Organisers</h4>
+                  <p>
+                    Participants can connect with the hackathon organisers and get their queries resolved. Moreover a session on Devfolio submission requirements will be conducted.
                   </p>
                 </div>
               </div>
@@ -613,11 +643,41 @@
 
             <div class="timeline" id="9th" style="display: none;">
               <div class="timeline-row">
-                <div class="timeline-time">26th Dec 6:00 pm</div>
+                <div class="timeline-time">10:00 am</div>
                 <div class="timeline-content">
-                  <h4>Release of Problem Statements </h4>
+                  <h4>Final Submission - Coding Time Ends</h4>
                   <p>
-                    Problem statements focussing on the recent and trending topics in the field of research and development will be released.
+                    The participants will have to submit their final work on Devfolio. After this point, no addition to the project will be allowed.
+                  </p>
+                </div>
+              </div>
+
+              <div class="timeline-row">
+                <div class="timeline-time">10:00 am</div>
+                <div class="timeline-content">
+                  <h4>Mentoring Session - II</h4>
+                  <p>
+                    Mentors will visit the teams again to evaluate their work. The participants are expected to pitch their ideas as well as show a demo of their hack within a stipulated amount of time.
+                  </p>
+                </div>
+              </div>
+
+              <div class="timeline-row">
+                <div class="timeline-time">4:00 pm</div>
+                <div class="timeline-content">
+                  <h4>Presentation Round </h4>
+                  <p>
+                    The top 10 teams will have to present their ideas and projects in front of judges. The Showdown Begins!
+                  </p>
+                </div>
+              </div>
+
+              <div class="timeline-row">
+                <div class="timeline-time">7:00 pm</div>
+                <div class="timeline-content">
+                  <h4>Closing Ceremony</h4>
+                  <p>
+                    The winners of DotSlash 5.0 will be announced. Prizes for the winners will be revealed followed by the Vote of thanks.
                   </p>
                 </div>
               </div>
@@ -933,7 +993,7 @@
                     </div>
                   </div>
                 </a>
-                <button class="session-link">
+                <button class="session-link" onClick="javascript:window.open('https://youtu.be/BsdUEhbfl2I', '_blank');">
                   <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#ffffff"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M10 16.5l6-4.5-6-4.5zM12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"/></svg>
                   Session Link
                 </button>
