added new mentors

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1064,6 +1064,30 @@
                 </div>
               </a>
 
+              <a href="https://www.linkedin.com/in/littlestar642">
+                <div class="speaker-card">
+                  <img src="img/mentors/avinash.PNG" alt="">
+                  <h1 class="speaker-title">Avinash Jaiswal</h1>
+                  <h3 class="speaker-designation">SDE 2<br>Gojek</h3>
+                </div>
+              </a>
+
+              <a href="https://www.linkedin.com/in/hrishabh-sharma-122338163/">
+                <div class="speaker-card">
+                  <img src="img/mentors/hrishabh.PNG" alt="">
+                  <h1 class="speaker-title">Hrishabh Sharma</h1>
+                  <h3 class="speaker-designation">Software Engineer<br>HSBC</h3>
+                </div>
+              </a>
+
+              <a href="https://www.linkedin.com/in/devrajat/">
+                <div class="speaker-card">
+                  <img src="img/mentors/rajat.PNG" alt="">
+                  <h1 class="speaker-title">Rajat Sharma</h1>
+                  <h3 class="speaker-designation">Software Engineer<br>JP Morgan Chase & Co.</h3>
+                </div>
+              </a>
+
               <a href="https://www.linkedin.com/in/ksatyarth2/">
                 <div class="speaker-card">
                   <img src="img/mentors/kumar.PNG" alt="">
