--- a/public/css/timeline.css
+++ b/public/css/timeline.css
@@ -80,8 +80,8 @@
     text-align: right;
     margin-right: 20px;
     color: #bcd0f7;
-    font-size: 1.7rem;
-    margin-top: 5px;
+    font-size: 2rem;
+    margin-top: 3px;
   }
   .timeline-row .timeline-time small {
     display: block;
@@ -210,7 +210,7 @@
     }
     .timeline .timeline-row:nth-child(odd) .timeline-time {
       position: relative;
-      top: -2px;
+      top: 0px;
       left: 0;
       margin: 0 0 10px 30px;
     }
@@ -230,7 +230,7 @@
     }
     .timeline .timeline-row:nth-child(even) .timeline-time {
       position: relative;
-      top: -2px;
+      top: 0px;
       left: 0;
       margin: 0 0 10px 30px;
       text-align: left;
@@ -263,4 +263,24 @@
   }
 
 
-  
+.schedule-navbar{
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 30px;
+}
+
+.toggle-buttons{
+  margin: 0px 10px;
+  padding: 1rem 1.5rem;
+  border: 0px;
+  border-radius: 10px;
+  background: rgb(39, 46, 72);
+  font-size: 20px;
+}
+
+.schedule-navbar>*.active {
+    background: white;
+    color: #1a233a;
+    font-weight: bold;
+}
