add judges section

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -583,7 +583,7 @@ div#swal2-content ol li {
   color: #bd0c0e;
 }
 .profile {
-  background-color: #1d1d22;
+  background-color: black;
   min-height: 50vh;
   height: 400px;
   margin: 0;
