--- a/views/home.hbs
+++ b/views/home.hbs
@@ -130,7 +130,7 @@
                 {{!-- <li><a href="#about">About</a></li> --}}
                 <li><a href="/prizes">Prizes</a></li>
                 <li><a href="#schedule">Schedule</a></li>
-                <li><a href="#sessions">Sessions</a></li>
+                <li><a href="#judges">Judges</a></li>
                 <li><a href="#mentors">Mentors</a></li>
                 <li><a href="#sponsors">Sponsors</a></li>
                 <li><a href="#faq">FAQs</a></li>
@@ -1002,6 +1002,83 @@
             </div>
           </div>
         </div>
+      </div>
+
+      <!-- judges -->       
+      <div class="section" id="judges">         
+        <div class="section-title">           
+          <h3 class="title"><span style="color: #fff"> Our&nbsp;</span>
+            <span style="color: #bd0c0e;">Judges</span>           
+          </h3>         
+        </div>         
+        <div class="container">           
+          <div id="profile-owl" class="owl-carousel owl-theme">             
+            <div class="row">               
+              <div class="profile-item col-md-12 col-12 col-lg-12 col-sm-12 col-xl-12">                 
+                <div class="profile">
+                  <div class="content">                     
+                    <h1 class="title">Shivay Lamba</h1>                     
+                    <div class="content-body">                       
+                      <p>CTO at DarkHorse</p>      
+                      <p>GSOC'20 Mentor at Jenkins and CNCF</p>                     
+                    </div>                   
+                  </div>                   
+                  <div class="image-section">                     
+                    <img class="profile_image" src="/img/judges/judge-1.png" alt="profile-pic">                   
+                  </div>                 
+                </div>               
+              </div>             
+            </div>             
+            <div class="row">               
+              <div class="profile-item col-md-12 col-12 col-lg-12 col-sm-12 col-xl-12">                 
+                <div class="profile">                   
+                  <div class="content">                     
+                    <h1 class="title">Karthik Sridharan</h1>                     
+                    <div class="content-body">                       
+                      <p>Co-founder & CEO at Flexiple and buildd.co</p>                       
+                      <p>Co-founder of Remote.tools</p>                     
+                    </div>                   
+                  </div>                   
+                  <div class="image-section">                     
+                    <img class="profile_image" src="/img/judges/judge-2.jpeg" alt="profile-pic">                   
+                  </div>                 
+                </div>               
+              </div>             
+            </div>             
+            <div class="row">               
+              <div class="profile-item col-md-12 col-12 col-lg-12 col-sm-12 col-xl-12">                 
+                <div class="profile">                   
+                  <div class="content">                     
+                    <h1 class="title">Mohit Prateek</h1>                     
+                    <div class="content-body">                       
+                      <p>Co-founder & CEO at Anakin</p>                       
+                      <p>Founder at Zipycars and Oxygen Adventures</p>                     
+                    </div>                   
+                  </div>                   
+                  <div class="image-section">                     
+                    <img class="profile_image" src="/img/judges/judge-3.jpeg" alt="profile-pic">                   
+                  </div>                 
+                </div>               
+              </div>             
+            </div>             
+            <div class="row">               
+              <div class="profile-item col-md-12 col-12 col-lg-12 col-sm-12 col-xl-12">                 
+                <div class="profile">                   
+                  <div class="content">                     
+                    <h1 class="title">Vivek Sridhar</h1>                     
+                    <div class="content-body">                       
+                      <p>Senior Cloud Advocate, Developer Relations</p>                       
+                      <p>and Cloud + AI Engineering at Microsoft</p>                     
+                    </div>                   
+                  </div>                   
+                  <div class="image-section">                     
+                    <img class="profile_image" src="/img/judges/judge-4.jpeg" alt="profile-pic">                   
+                  </div>                 
+                </div>               
+              </div>             
+            </div>           
+          </div>         
+        </div>       
       </div>
 
       <!-- section title -->
