--- a/views/prizes.hbs
+++ b/views/prizes.hbs
@@ -107,7 +107,7 @@
                 {{!-- <li><a href="/#about">About</a></li> --}}
                 <li><a href="#">Prizes</a></li>
                 <li><a href="/#schedule">Schedule</a></li>
-                <li><a href="/#sessions">Sessions</a></li>
+                <li><a href="/#judges">Judges</a></li>
                  <li><a href="/#mentors">Mentors</a></li>
                 <li><a href="/#sponsors">Sponsors</a></li>
                 <li><a href="/#faq">FAQs</a></li>
