--- a/views/home.hbs
+++ b/views/home.hbs
@@ -878,6 +878,35 @@
                   <h3 class="speaker-designation">Student<br>Indiana University Bloomington</h3>
                 </div>
               </a>
+
+              <a href="https://www.linkedin.com/in/sarvesh-dubey-1b1505143/">
+                <div class="speaker-card">
+                  <img src="img/mentors/sarvesh.jpg" alt="">
+                  <h1 class="speaker-title">Sarvesh Dubey</h1>
+                  <h3 class="speaker-designation">Full Stack Developer<br>LambdaTest</h3>
+                </div>
+              </a>
+
+              <a href="mailto:smitpat2000@gmail.com">
+                <div class="speaker-card">
+                  <img src="img/mentors/smith.jpg" alt="">
+                  <h1 class="speaker-title">Smit Patel</h1>
+                </div>
+              </a>
+
+              <a href="https://www.linkedin.com/in/mihir-khambhati-577696179/">
+                <div class="speaker-card">
+                  <img src="img/mentors/mihir.jpg" alt="">
+                  <h1 class="speaker-title">Mihir Khambhati</h1>
+                </div>
+              </a>
+
+              <a href="mailto:krunalrank0609@gmail.com">
+                <div class="speaker-card">
+                  <img src="img/mentors/krunal.jpg" alt="">
+                  <h1 class="speaker-title">Krunal Rank</h1>
+                </div>
+              </a>
             </div>
           </div>
         </div>
@@ -914,7 +943,7 @@
         </div>
 
         <!-- section title -->
-        <div id="sessions" class="section" style="margin-top: 80px;">
+        <div id="sessions" class="section">
           <!-- container -->
           <div class="container">
             <!-- row -->
