--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1499,7 +1499,7 @@
                         >play_arrow</i></span>Who can participate?
 
                     </h3>
-                    <p class="collapse box1" id="num1">All university students irrespective of any course are eligible to apply.
+                    <p class="collapse box1" id="num1">This is OPEN FOR ALL students residing in India.
                     </p>
                     <br />
 
